[gd_scene load_steps=4 format=1]

[ext_resource path="res://assets/graphics/style/panel_ver.png" type="Texture" id=1]
[ext_resource path="res://Main/WorldMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = 4.0
content_margin/right = 4.0
content_margin/top = 4.0
content_margin/bottom = 4.0
texture = ExtResource( 1 )
margin/left = 8.0
margin/right = 8.0
margin/top = 8.0
margin/bottom = 8.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="WorldMenu" type="PopupPanel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 119.0
margin/right = -55.0
margin/bottom = -123.0
custom_styles/panel = SubResource( 1 )
popup/exclusive = true
script/script = ExtResource( 2 )

[node name="box" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 4.0
margin/right = 16.0
margin/bottom = 4.0
alignment = 1

[node name="Resume" type="Button" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 59.0
margin/right = 114.0
margin/bottom = 79.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="Save" type="Button" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 83.0
margin/right = 114.0
margin/bottom = 103.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="Options" type="Button" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 107.0
margin/right = 114.0
margin/bottom = 127.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="Exit" type="Button" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 131.0
margin/right = 114.0
margin/bottom = 151.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save & Exit"
flat = false

[node name="Quit" type="Button" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 155.0
margin/right = 114.0
margin/bottom = 175.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit to Desktop"
flat = false

[connection signal="pressed" from="box/Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="box/Save" to="." method="_on_Save_pressed"]

[connection signal="pressed" from="box/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="box/Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="box/Quit" to="." method="_on_Quit_pressed"]


